Revised HTML structure and changed JS module

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dropdownmenu",
+  "name": "michaelkhannadropdownmenu",
   "version": "1.0.0",
   "description": "\"Simple Drop Down Menu\"",
   "main": "index.js",
